fix after review

--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -19,6 +19,8 @@
     position: absolute;
     color: #3456F3;
     bottom: 35px;
+    text-decoration: none;
+    cursor: pointer;
   }
 
   @media (max-width: 480px) {
